--- a/web/src/components/layout.css
+++ b/web/src/components/layout.css
@@ -32,3 +32,16 @@
     margin-left: 10px;
   }
 
+  .ant-menu-title-content {
+    font-size: 16px;
+  }
+
+  .logo {
+    text-align: center;
+    margin: 15px 0;
+  }
+
+  .logo-title {
+    letter-spacing: 1.3px;
+    color: #ffffff;
+  }
