--- a/web/src/index.css
+++ b/web/src/index.css
@@ -216,16 +216,43 @@ body {
   margin: 0 30px;
   cursor: pointer;
   padding: 5px;
+  transition: all 0.2s!important;
+}
+
+.categoryFlex h3{
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  font-size: 12px;
+}
+
+.categoryFlex:hover {
+  box-shadow: 0 0 5px #afafaf;
+  border-radius: 5px;
+  background-color: teal !important;
+  color: white !important;
+}
+
+.categoryFlex:hover h3{
+  color: white !important;
 }
 
 .category-active {
   box-shadow: 0 0 5px #afafaf;
+  background-color: #001e28;
   border-radius: 5px;
+  color: white;
+  transition: all 0.2s!important;
+}
+
+.category-active h3 {
+  color: white;
 }
 
 .categoryName {
   text-transform: capitalize;
-  letter-spacing: 1.3px;
+  letter-spacing: 1px;
+  font-size: 12px;
+  color: white;
 }
 
 .form {
