--- a/web/src/index.css
+++ b/web/src/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'Open Sans', sans-serif !important;
+  font-family: 'Montserrat', sans-serif !important;
 }
 
 .product-btn {
