--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,20 @@ body {
   font-family: 'Montserrat', sans-serif !important;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.product-card {
+  animation: fadeIn 1s !important;
+}
+
 .product-btn {
   margin-top: 25px;
   width: 100%;
